--- a/contact/index.html
+++ b/contact/index.html
@@ -67,9 +67,10 @@
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kenneth.bunker@uss.cl</a></p>
 <p>Facultad de Economía y Gobierno</p>
-<p>Distrito 10</p>
-<p>Providencia, RM</p>
+<p>Bellavista 7</p>
+<p>Recoleta, RM</p>
 <p>Chile</p>
+</blockquote>
 <hr>
 <h2 id="address">Tresquintos</h2>
 <blockquote>
