--- a/contact/index.html
+++ b/contact/index.html
@@ -70,6 +70,7 @@
 <p>Bellavista 7</p>
 <p>Recoleta, RM</p>
 <p>Chile</p>
+<a href="https://uss.cl">Web</a>
 </blockquote>
 <hr>
 <h2 id="address">Tresquintos</h2>
@@ -79,6 +80,7 @@
 <p>Distrito 10</p>
 <p>Providencia, RM</p>
 <p>Chile</p>
+<a href="https://tresquintos.cl">Web</a>
 </blockquote>
 <hr>
 <h2 id="address">Politico Tech Global</h2>
@@ -88,6 +90,7 @@
 <p>Av. Presidente Kennedy 7900</p>
 <p>Vitacura, RM</p>
 <p>Chile</p>
+<a href="https://politicotechglobal.com">Web</a>
 </blockquote>
 <hr>
 <h2 id="links">Links</h2>
