--- a/contact/index.html
+++ b/contact/index.html
@@ -83,6 +83,7 @@
 <a href="https://tresquintos.cl">Web</a>
 </blockquote>
 <hr>
+![ep](/img/ptg.png){:height="4%" width="4%"} 
 <h2 id="address">Politico Tech Global</h2>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
