--- a/contact/index.html
+++ b/contact/index.html
@@ -73,6 +73,7 @@
 <a href="https://uss.cl">Web</a>
 </blockquote>
 <hr>
+<img src="../img/tresquintos.png" alt="Tresquintos" width="10" height="10">
 <h2 id="address">Tresquintos</h2>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kbunker@tresquintos.cl</a></p>
