--- a/contact/index.html
+++ b/contact/index.html
@@ -73,7 +73,11 @@
 <a href="https://uss.cl">Web</a>
 </blockquote>
 <hr>
-<img src="../img/tresquintos.png" alt="Tresquintos" width="10" height="10">
+<p style="display:inline-block;">
+  <img src="../img/tresquintos.png" alt="Tresquintos" width="30" height="30>
+  Some text
+</p>
+
 <h2 id="address">Tresquintos</h2>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kbunker@tresquintos.cl</a></p>
