--- a/contact/index.html
+++ b/contact/index.html
@@ -74,10 +74,8 @@
 </blockquote>
 <hr>
 <p style="display:inline-block;">
-  <img src="../img/tresquintos.png" alt="Tresquintos" width="30" height="30>
-  Some text
-</p>
-
+  <img src="../img/tresquintos.png" alt="Tresquintos" width="30" height="30">
+  Some text </p>
 <h2 id="address">Tresquintos</h2>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kbunker@tresquintos.cl</a></p>
