--- a/contact/index.html
+++ b/contact/index.html
@@ -65,6 +65,7 @@
 <div class="container">
 <h2 id="address">USS</h2>
 <blockquote>
+<img src="../img/uss.jpeg" alt="PTG" width="30" height="30">
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kenneth.bunker@uss.cl</a></p>
 <p>Facultad de Economía y Gobierno</p>
 <p>Bellavista 7</p>
@@ -73,9 +74,7 @@
 <a href="https://uss.cl">Web</a>
 </blockquote>
 <hr>
-<p style="display:inline-block;">
-  <img src="../img/tresquintos.png" alt="Tresquintos" width="30" height="30">
-  Some text </p>
+<img src="../img/tresquintos.png" alt="Tresquintos" width="30" height="30">
 <h2 id="address">Tresquintos</h2>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kbunker@tresquintos.cl</a></p>
@@ -86,7 +85,7 @@
 <a href="https://tresquintos.cl">Web</a>
 </blockquote>
 <hr>
-<img src="img/ptg.jpeg" alt="PTG" width="10" height="10">
+<img src="../img/ptg.jpeg" alt="PTG" width="30" height="30">
 <h2 id="address">Politico Tech Global</h2>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
