--- a/contact/index.html
+++ b/contact/index.html
@@ -63,7 +63,9 @@
 <hr>
 <div id="content">
 <div class="container">
-<h2 id="address">USS</h2>
+<p style="display:inline-block;">
+  <img src="../img/uss.jpeg" alt="USS" width="30" height="30">
+  USS </p>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kenneth.bunker@uss.cl</a></p>
 <p>Facultad de Economía y Gobierno</p>
@@ -75,7 +77,7 @@
 <hr>
 <p style="display:inline-block;">
   <img src="../img/tresquintos.png" alt="Tresquintos" width="30" height="30">
-  <h2 id="address">Tresquintos</h2> </p>
+  Tresquintos </p>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kbunker@tresquintos.cl</a></p>
 <p>Trequintos</p>
