--- a/contact/index.html
+++ b/contact/index.html
@@ -87,8 +87,9 @@
 <a href="https://tresquintos.cl">Web</a>
 </blockquote>
 <hr>
-<img src="img/ptg.jpeg" alt="PTG" width="10" height="10">
-<h2 id="address">Politico Tech Global</h2>
+<p style="display:inline-block;">
+  <img src="../img/ptg.jpeg" alt="PTG" width="30" height="30">
+  Politico Tech Global </p>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
 <p>Politico Tech Global</p>
