--- a/contact/index.html
+++ b/contact/index.html
@@ -88,7 +88,7 @@
 </blockquote>
 <hr>
 <p style="display:inline-block;">
-  <img src="../img/ptg.jpeg" alt="PTG" width="30" height="30">
+  <img src="../img/ptg.png" alt="PTG" width="30" height="30">
   Politico Tech Global </p>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
