--- a/contact/index.html
+++ b/contact/index.html
@@ -65,7 +65,7 @@
 <div class="container">
 <p style="display:inline-block;">
   <img src="../img/uss.jpeg" alt="USS" width="30" height="30">
-  USS </p>
+  Universidad San Sebastián </p>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kenneth.bunker@uss.cl</a></p>
 <p>Facultad de Economía y Gobierno</p>
