--- a/contact/index.html
+++ b/contact/index.html
@@ -23,7 +23,14 @@
     <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
     <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
-    
+  
+      <style>
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    </style>  
     
 </head>
 
