--- a/contact/index.html
+++ b/contact/index.html
@@ -70,9 +70,9 @@
 <hr>
 <div id="content">
 <div class="container">
-<p style="display:inline-block;"><a href="https://www.Youtube.com/">
+<p style="display:inline-block;">
   <img src="../img/uss.jpeg" alt="USS" width="30" height="30">
-  Universidad San Sebastián </a></p>
+  Universidad San Sebastián </p>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kenneth.bunker@uss.cl</a></p>
 <p>Facultad de Economía y Gobierno</p>
