--- a/columns/index.html
+++ b/columns/index.html
@@ -74,6 +74,7 @@
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20231026 - Reputación y confianza</li>
 <li>20230928 - Comenzar de cero</li>
 <li>20230927 - El tiempo es juez</li>
 <li>20230922 - Sentido común</li>
@@ -357,6 +358,11 @@
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
+<li>20231027 - El crépusculo de la generación dorada</li>
+<li>20231020 - Boric, Xi, Putin y Hamas</li>
+<li>20231013 - Una historia de tozudez, ambición y negligencia</li>
+<li>20231006 - Justificaciones</li>
+<li>20230929 - Morir con las botas puestas</li>
 <li>20230922 - La intencionalidad del fracaso constitucional</li>
 <li>20230915 - El tono del senado</li>
 <li>20230911 - Un discurso cojo</li>
