--- a/press/index.html
+++ b/press/index.html
@@ -74,6 +74,10 @@
 
 
 
+<li><strong>Yahoo Noticias</strong>. <a href="https://es-us.noticias.yahoo.com/chile-propuesta-constituci%C3%B3n-ir%C3%A1-plebiscito-225830944.html">Chile ya tiene nueva propuesta de Constitución, irá a plebiscito en diciembre.</a>30 October, 2023.</li>
+
+<li><strong>Reuters</strong>. <a href="https://www.reuters.com/world/americas/chilean-congressional-council-finalizes-new-draft-constitution-again-2023-10-30/">Chilean congressional council finalizes new draft constitution, again.</a>30 October, 2023.</li>
+
 <li><strong>El Periodico</strong>. <a href="https://www.elperiodico.com/es/internacional/20230927/proceso-constituyente-chile-nuevo-naufragio-92599383">El proceso constituyente de Chile se acerca a un nuevo horizonte de naufragio.</a>26 September, 2023.</li>
 
 <li><strong>Deutsche Welle</strong>. <a href="https://www.dw.com/es/civiles-y-ffaa-en-chile-la-lucha-por-superar-la-dictadura/a-66748430">Civiles y FF.AA. en Chile: la lucha por superar la dictadura.</a> 11 September, 2023.</li>
