--- a/press/index.html
+++ b/press/index.html
@@ -73,6 +73,7 @@
 <ul>
 
 
+<li><strong>Folha de Sao Paulo</strong>. <a href="https://es-us.noticias.yahoo.com/chile-propuesta-constituci%C3%B3n-ir%C3%A1-plebiscito-225830944.html">Chile encaminha nova proposta de Constituição para votação popular.</a>1 November, 2023.</li>
 
 <li><strong>Yahoo Noticias</strong>. <a href="https://es-us.noticias.yahoo.com/chile-propuesta-constituci%C3%B3n-ir%C3%A1-plebiscito-225830944.html">Chile ya tiene nueva propuesta de Constitución, irá a plebiscito en diciembre.</a>30 October, 2023.</li>
 
