--- a/columns/index.html
+++ b/columns/index.html
@@ -74,6 +74,7 @@
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20231030 - Los gestos cuestan caro</li>
 <li>20231030 - ¿La segunda es la vencida?</li>
 <li>20231026 - Reputación y confianza</li>
 <li>20230928 - Comenzar de cero</li>
@@ -359,6 +360,7 @@
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
+<li>20231105 - Una Constitución de consensos y no de extremos</li>
 <li>20231027 - El crépusculo de la generación dorada</li>
 <li>20231020 - Boric, Xi, Putin y Hamas</li>
 <li>20231013 - Una historia de tozudez, ambición y negligencia</li>
