--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 </div>
 <hr>
 <div id="content">
-<div class="container">
+<div class="row">
+  <div class="column">
+  <div class="container">
     <h2 id="about-me">Hello world!</h2>
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
@@ -148,8 +150,10 @@
 <p>You can reach me via e-mail at: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
 
 </div>
-
-        </div><div id="footer" class="mb-5">
+</div>
+  <div class="column"></div>
+Hello
+</div>        </div><div id="footer" class="mb-5">
     
         <hr>
         <div class="container text-center">
