--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
 }
  </style>     
 
+<style>  
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%;
+}
+ </style>  
+
+ 
 <head>
 <meta property="og:title" content="Kenneth Bunker" />
 <meta property="og:image" content="https://kennethbunker.github.io/me1.png" />
