--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 </div>
 </div>
-  <div class="column"></div>
+  <div class="column">
 Hello
 </div>        </div><div id="footer" class="mb-5">
     
