--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
 
 </div>
 </div>
-  <div class="column">
-<div id="content">
-<div class="container">
+<div class="row">
+    <div class="column">
+    <div id="content">
+    <div class="container">
 
 <h2 id="en-la-prensa">En la prensa</h2>
 <hr>
@@ -1550,11 +1551,22 @@
 </li>
 </ul>
 
+
+
+
+
+
+
+
 </div>
 </div>
-  <div class="column">
-<div id="content">
-<div class="container">
+  <div class="row">
+    <div class="column">
+    <div id="content">
+    <div class="container">
+
+
+
 
 
 <h2 id="in-the-press">In the press</h2>
