--- a/index.html
+++ b/index.html
@@ -1560,7 +1560,6 @@
 
 </div>
 </div>
-  <div class="row">
     <div class="column">
     <div id="content">
     <div class="container">
@@ -2233,6 +2232,8 @@
 
 <hr>
 </div>
+</div>
+
         </div><div id="footer" class="mb-5">
 
 
