--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
     margin-left: 30px;
 }
 
-.row {
-  display: flex;
+.column {
+  float: left;
+  width: 33.33%;
 }
 
-.column {
-  flex: 30%;
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
  </style>  
 
