--- a/index.html
+++ b/index.html
@@ -1559,6 +1559,10 @@
 <hr>
 </div>
 </div>
+</div>
+
+
+
 
 
 
@@ -1566,9 +1570,6 @@
   <div class="column">
     <div id="content">
     <div class="container">
-
-<div id="content">
-<div class="container">
 
 <h2 id="in-the-press">In the press</h2>
 <hr>
