--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
 
 <style>    
-  p.shifted {
+ body {
+  margin: 20px;
+}
+
+ p.shifted {
     margin-left: 30px;
 }
 
