--- a/index.html
+++ b/index.html
@@ -48,6 +48,45 @@
 }
  </style>  
 
+
+ <style>  
+/*Set the row height to the viewport*/
+.row-height{
+  height: 100vh;
+}
+
+/*Set up the columns with a 100% height, body color and overflow scroll*/
+
+.left{
+  background-color: red;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.right{
+  background-color: blue;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.mid{
+  background-color: green;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+/*Remove the scrollbar from Chrome, Safari, Edge and IE*/
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
+
+* {
+  -ms-overflow-style: none !important;
+}
+ </style>  
+
+
 <head>
 <meta property="og:title" content="Kenneth Bunker" />
 <meta property="og:image" content="https://kennethbunker.github.io/me1.png" />
@@ -96,7 +135,8 @@
 <div class="row">
   <div class="column">
   <div class="container">
-
+        <div class = "row row-height">
+        <div class = "col-md-4 left">
 
 <h2 id="about-me">Hello world!</h2>
 <figure class="avatar">
@@ -166,7 +206,8 @@
 <hr>
 </div>
 </div>
-
+</div>
+</div>
 
 
 
