--- a/index.html
+++ b/index.html
@@ -25,47 +25,29 @@
 
     <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
 
-
-
-
-
- <style>  
-/*Set the row height to the viewport*/
-.row-height{
-  height: 100vh;
+<style>    
+ body {
+  margin: 40px;
 }
 
-/*Set up the columns with a 100% height, body color and overflow scroll*/
+ p.shifted {
+    margin-left: 30px;
+}
 
-.left{
-  background-color: red;
+.column {
+  float: left;
+  width: 33.33%;
   height: 100%;
   overflow-y: scroll;
 }
 
-.right{
-  background-color: blue;
-  height: 100%;
-  overflow-y: scroll;
-}
-
-.mid{
-  background-color: green;
-  height: 100%;
-  overflow-y: scroll;
-}
-
-/*Remove the scrollbar from Chrome, Safari, Edge and IE*/
-::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
-}
-
-* {
-  -ms-overflow-style: none !important;
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
  </style>  
-
 
 <head>
 <meta property="og:title" content="Kenneth Bunker" />
@@ -115,9 +97,6 @@
 <div class="row">
   <div class="column">
   <div class="container">
-    <div class = "container-fluid">
-      <div class = "row row-height">
-        <div class = "col-md-4 left">
 
 <h2 id="about-me">Hello world!</h2>
 <figure class="avatar">
