--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 .column {
   float: left;
   width: 33.33%;
-  height: 100%;
-  overflow-y: scroll;
+  overflow: scroll;
 }
 
 /* Clear floats after the columns */
@@ -97,6 +96,7 @@
 <div class="row">
   <div class="column">
   <div class="container">
+
 
 <h2 id="about-me">Hello world!</h2>
 <figure class="avatar">
@@ -166,8 +166,7 @@
 <hr>
 </div>
 </div>
-</div>
-</div>
+
 
 
 
