--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           
           Kenneth Bunker
         </a>
-        <div class="navbar-nav flex-row flex-wrap justify-content-center"> 
+        <div class="navbar-nav flex-row flex-wrap justify-content-left"> 
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/">
                         About
                     </a>           
