--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           Kenneth Bunker
         </a>
         <div class="navbar-nav flex-row flex-wrap justify-content-left"> 
+                    
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/">
                         About
                     </a>           
@@ -84,10 +85,14 @@
                         Columns
                     </a>              
                         <span class="nav-item navbar-text mx-1">/</span>
+                                        <a class="nav-item nav-link" href="https://kennethbunker.github.io/interviews">
+                        Interviews
+                    </a>  
+                         <span class="nav-item navbar-text mx-1">/</span>   
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
                         Contact
                     </a>  
-        </div>
+     </div>
     </nav>
 </div>
 <hr>
