--- a/covers/index.html
+++ b/covers/index.html
@@ -344,7 +344,7 @@ gap: 5px;
     <img src="/img/20210411%20-%20El_Sur.png"> 
   </div>
   <div>
-    <img src="/img/20160522%20-%20El_Centro.png"> 
+    <img src="/img/20170725%20-%20La Segunda.png"> 
   </div>
   <div>
     <img src="/img/20160522%20-%20El_Centro.png">
