--- a/covers/index.html
+++ b/covers/index.html
@@ -77,9 +77,15 @@ gap: 5px;
 
 
 <div class="parent">
+<div>
     <img src="/img/20210719%20-%20LUN.png">
+</div>
+<div>
     <img src="/img/20211122%20-%20LUN.png">
+</div>
+<div>
     <img src="/img/20211220%20-%20LUN.png">
+</div>
 </div>
 
 <div class="parent">
