--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, a consultant and a columnist. I am an academic at the Economics Department and director of the Democracy and Government Lab at San Sebastian University. I also contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide, and I am a regular current affairs television, radio and newspaper commentator.</p>
+<p>I am an academic, a consultant and a columnist. I am an academic at the Economics Department and director of the Democracy and Government Lab at San Sebastian University. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide, and regularly comment on current affairs.</p>
 
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
@@ -122,7 +122,6 @@
 
 <p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.sciencedirect.com/science/article/abs/pii/S0169207020300212?via%3Dihub">here</a>.
 
-<p>I won the 2023 WAPOR/RLOP <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085234162747490305/">Braun Prize</a> for the application of the TSM in two-horse races.</p>
 
 <p>In addition to my main post, I am also an adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in the field of political science. Here is my full <a href="https://kennethbunker.github.io/cv.pdf">CV</a>.</p>
 
