--- a/columns/index.html
+++ b/columns/index.html
@@ -59,13 +59,13 @@
  </style>  
 </head>
 
-    <body><div class="fullkb">
+    <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
         <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io/">
           
           Kenneth Bunker
         </a>
-        <div class="navbar-nav flex-row flex-wrap justify-content-center"> 
+        <div class="navbar-nav flex-row flex-wrap fullkb"> 
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/">
                         About
                     </a>           
