--- a/columns/index.html
+++ b/columns/index.html
@@ -65,7 +65,7 @@
           
           Kenneth Bunker
         </a>
-        <div class="navbar-nav flex-row flex-wrap fullkb"> 
+        <div class="fullkb"> 
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/">
                         About
                     </a>           
