--- a/columns/index.html
+++ b/columns/index.html
@@ -65,7 +65,7 @@
           
           Kenneth Bunker
         </a>
-        <div class="fullkb"> 
+        <div class="navbar-nav flex-row flex-wrap justify-content-center"> 
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/">
                         About
                     </a>           
@@ -104,7 +104,8 @@
 <a href="https://www.lun.com">Las Últimas Noticias</a> / <a href="https://www.ex-ante.cl">Ex-Ante</a> / <a href="https://www.latercera.cl">La Tercera</a> / <a href="https://t13.cl">T13</a>  / <a href="https://elmostrador.cl">El Mostrador</a>
 
 <hr>
-<div class="column">
+<div class="fullkb">
+    <div class="column">
 
 <ul>
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
@@ -712,6 +713,7 @@
 
 <hr>
 
+</div>
 </div>
         </div><div id="footer" class="mb-5">
     
