--- a/columns/index.html
+++ b/columns/index.html
@@ -394,7 +394,7 @@
 </ul>
     </div>
 
-
+<div class="column">
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
@@ -546,9 +546,10 @@
 <li>20210131 - Los dilemas de Paula Narváez</li>
 <li>20210124 - Rincón versus Undurraga y el declive de la DC</li>
 </ul>
+</div>
 
-
-<h2 id="t13-2014-2016-">T13 (2014 - 2016)</h2>
+    <div class="column">
+        <h2 id="t13-2014-2016-">T13 (2014 - 2016)</h2>
 <p><a href="https://www.t13.cl"><em>T13</em></a></p>
 <ul>
 <li>20160619 - Pudo ser mejor</li>
@@ -705,7 +706,7 @@
 <li>20131125 - Warscapes. <a href="http://www.warscapes.com/opinion/michelle-bachelet-s-legislative-majority">Michelle Bachelet&#39;s Legislative Majority</a>
 </li>
 </ul>
-
+</div>
 <hr>
 <h2 id="links">Links</h2>
 <p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">Twitter</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">On the Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://www.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía y Gobierno</a></p> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker
