--- a/columns/index.html
+++ b/columns/index.html
@@ -59,7 +59,7 @@
  </style>  
 </head>
 
-    <body><div class="container mt-5">
+    <body><div class="fullkb">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
         <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io/">
           
