--- a/columns/index.html
+++ b/columns/index.html
@@ -60,8 +60,8 @@
 </head>
 
     <body><div class="fullkb">
-    <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
-        <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io/">
+    <nav class="fullkb">
+        <a class="fullkb" href="https://kennethbunker.github.io/">
           
           Kenneth Bunker
         </a>
