--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
     width: 100%;
   }
 }
- </style>  
+  
+div.vertical-line{
+      width: 1px; /* Line width */
+      background-color: black; /* Line color */
+      height: 100%; /* Override in-line if you want specific height. */
+      float: left; /* Causes the line to float to left of content. 
+        You can instead use position:absolute or display:inline-block
+        if this fits better with your design */
+    } 
+
+</style>  
 
 <meta property="og:title" content="Kenneth Bunker" />
 <meta property="og:image" content="https://kennethbunker.github.io/me1.png" />
@@ -171,6 +181,7 @@
 </div>
 
 
+<div class="vertical-line" style="height: 45px;"></div>
 
 
   <div class="column">
