--- a/columns/index.html
+++ b/columns/index.html
@@ -71,9 +71,10 @@
 
 <hr>
 <ul>
-<h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
+<h2 id="las-ultimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20231103 - La guinda de la torta</li>
 <li>20231103 - Los gestos cuestan caro</li>
 <li>20231030 - ¿La segunda es la vencida?</li>
 <li>20231026 - Reputación y confianza</li>
