--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
     width: 100%;
   }
 }
-
-
 </style>  
 
 <meta property="og:title" content="Kenneth Bunker" />
@@ -109,7 +107,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, a consultant and a columnist. I am an academic at the Economics Department and director of the Democracy and Government Lab at San Sebastian University. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide, and regularly comment on current affairs.</p>
+<p>I am an academic, a consultant and a columnist. I am an AP at the Economics Department of San Sebastian University, and director of the Democracy and Government Laboratory. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide, and regularly comment on current affairs.</p>
 
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
