--- a/columns/index.html
+++ b/columns/index.html
@@ -93,7 +93,8 @@
 <hr>
 <div id="content">
 <div class="container">
-
+<div class="row">
+    
 <h2 id="columns">Columns</h2>
 <hr>
 <p><em>Below are some of my columns published in <a href="https://en.wikipedia.org/wiki/Las_%C3%9Altimas_Noticias">Las Últimas Noticias</a>, <a href="https://www.ex-ante.cl/">Ex-Ante</a>, <a href="https://es.wikipedia.org/wiki/Teletrece">T13</a>, and <a href="https://en.wikipedia.org/wiki/La_Tercera">La Tercera</a>. For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em></p>
@@ -712,7 +713,7 @@
 ">Democracy and Government Lab</a></p>
 
 <hr>
-
+</div>
 </div>
         </div><div id="footer" class="mb-5">
     
