--- a/columns/index.html
+++ b/columns/index.html
@@ -44,6 +44,10 @@
   display: table;
   clear: both;
 }
+.fullkb {
+    min-height: 100vh;
+    max-width: 400px;
+}
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
@@ -93,8 +97,7 @@
 <hr>
 <div id="content">
 <div class="container">
-<div class="row">
-    
+
 <h2 id="columns">Columns</h2>
 <hr>
 <p><em>Below are some of my columns published in <a href="https://en.wikipedia.org/wiki/Las_%C3%9Altimas_Noticias">Las Últimas Noticias</a>, <a href="https://www.ex-ante.cl/">Ex-Ante</a>, <a href="https://es.wikipedia.org/wiki/Teletrece">T13</a>, and <a href="https://en.wikipedia.org/wiki/La_Tercera">La Tercera</a>. For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em></p>
@@ -105,6 +108,9 @@
 <a href="https://www.lun.com">Las Últimas Noticias</a> / <a href="https://www.ex-ante.cl">Ex-Ante</a> / <a href="https://www.latercera.cl">La Tercera</a> / <a href="https://t13.cl">T13</a>  / <a href="https://elmostrador.cl">El Mostrador</a>
 
 <hr>
+
+<div class="fullkb">
+
 <ul>
 <h2 id="las-ultimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
@@ -393,7 +399,7 @@
 </ul>
 
 </div>
-  <div class="column">
+  <div class="fullkb">
 
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
@@ -548,6 +554,7 @@
 </ul>
 
 </div>
+  <div class="fullkb">
 
 <h2 id="t13-2014-2016-">T13 (2014 - 2016)</h2>
 <p><a href="https://www.t13.cl"><em>T13</em></a></p>
@@ -713,7 +720,7 @@
 ">Democracy and Government Lab</a></p>
 
 <hr>
-</div>
+
 </div>
         </div><div id="footer" class="mb-5">
     
