--- a/columns/index.html
+++ b/columns/index.html
@@ -97,19 +97,18 @@
 <hr>
 <div id="content">
 <div class="container">
+ <div class="fullkb">
 
 <h2 id="columns">Columns</h2>
 <hr>
 <p><em>Below are some of my columns published in <a href="https://en.wikipedia.org/wiki/Las_%C3%9Altimas_Noticias">Las Últimas Noticias</a>, <a href="https://www.ex-ante.cl/">Ex-Ante</a>, <a href="https://es.wikipedia.org/wiki/Teletrece">T13</a>, and <a href="https://en.wikipedia.org/wiki/La_Tercera">La Tercera</a>. For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em></p>
 <hr>
 
-  <div class="column">
-
 <a href="https://www.lun.com">Las Últimas Noticias</a> / <a href="https://www.ex-ante.cl">Ex-Ante</a> / <a href="https://www.latercera.cl">La Tercera</a> / <a href="https://t13.cl">T13</a>  / <a href="https://elmostrador.cl">El Mostrador</a>
 
 <hr>
 
-<div class="fullkb">
+<div class="column">
 
 <ul>
 <h2 id="las-ultimas-noticias">Las Últimas Noticias</h2>
@@ -399,7 +398,7 @@
 </ul>
 
 </div>
-  <div class="fullkb">
+  <div class="column">
 
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
@@ -554,7 +553,7 @@
 </ul>
 
 </div>
-  <div class="fullkb">
+  <div class="column">
 
 <h2 id="t13-2014-2016-">T13 (2014 - 2016)</h2>
 <p><a href="https://www.t13.cl"><em>T13</em></a></p>
@@ -713,6 +712,7 @@
 <li>20131125 - Warscapes. <a href="http://www.warscapes.com/opinion/michelle-bachelet-s-legislative-majority">Michelle Bachelet&#39;s Legislative Majority</a>
 </li>
 </ul>
+</div>
 
 <hr>
 <h2 id="links">Links</h2>
