--- a/columns/index.html
+++ b/columns/index.html
@@ -45,8 +45,7 @@
   clear: both;
 }
 .fullkb {
-    min-height: 100vh;
-    max-width: 400px;
+    width: 100%;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
