--- a/columns/index.html
+++ b/columns/index.html
@@ -44,9 +44,6 @@
   display: table;
   clear: both;
 }
-.fullkb {
-    width: 100%;
-}
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
@@ -55,8 +52,6 @@
   }
 }
 </style>  
-
-
 
 </head>
 
@@ -397,7 +392,9 @@
 </ul>
 
 </div>
+</div>
   <div class="column">
+  <div class="container">
 
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
@@ -552,7 +549,9 @@
 </ul>
 
 </div>
-  <div class="column">
+</div>
+    <div class="column">
+    <div class="container">
 
 <h2 id="t13-2014-2016-">T13 (2014 - 2016)</h2>
 <p><a href="https://www.t13.cl"><em>T13</em></a></p>
