--- a/columns/index.html
+++ b/columns/index.html
@@ -711,6 +711,7 @@
 </li>
 </ul>
 </div>
+</div>
 
 <hr>
 <h2 id="links">Links</h2>
@@ -719,6 +720,7 @@
 
 <hr>
 
+</div>
 </div>
         </div><div id="footer" class="mb-5">
     
