--- a/columns/index.html
+++ b/columns/index.html
@@ -23,36 +23,6 @@
     
     <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
-<style>    
- body {
-  margin: 40px;
-}
-
- p.shifted {
-    margin-left: 30px;
-}
-
-.column {
-  float: left;
-  width: 33.33%;
-  overflow: scroll;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
-}
-</style>  
-
 </head>
 
     <body><div class="container mt-5">
@@ -90,7 +60,7 @@
 </div>
 <hr>
 <div id="content">
-
+<div class="container">
 
 <h2 id="columns">Columns</h2>
 <hr>
@@ -100,9 +70,6 @@
 <a href="https://www.lun.com">Las Últimas Noticias</a> / <a href="https://www.ex-ante.cl">Ex-Ante</a> / <a href="https://www.latercera.cl">La Tercera</a> / <a href="https://t13.cl">T13</a>  / <a href="https://elmostrador.cl">El Mostrador</a>
 
 <hr>
-<div class="row">
-<div class="column">
-
 <ul>
 <h2 id="las-ultimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
@@ -390,9 +357,6 @@
 <li>20180102 - Los tres gabinetes de Piñera</li>
 </ul>
 
-</div>
-</div>
-  <div class="column">
 
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
@@ -546,9 +510,6 @@
 <li>20210124 - Rincón versus Undurraga y el declive de la DC</li>
 </ul>
 
-</div>
-</div>
-    <div class="column">
 
 <h2 id="t13-2014-2016-">T13 (2014 - 2016)</h2>
 <p><a href="https://www.t13.cl"><em>T13</em></a></p>
@@ -707,9 +668,6 @@
 <li>20131125 - Warscapes. <a href="http://www.warscapes.com/opinion/michelle-bachelet-s-legislative-majority">Michelle Bachelet&#39;s Legislative Majority</a>
 </li>
 </ul>
-</div>
-</div>
-</div>
 
 <hr>
 <h2 id="links">Links</h2>
@@ -718,7 +676,7 @@
 
 <hr>
 
-
+</div>
         </div><div id="footer" class="mb-5">
     
         <hr>
