--- a/covers/index.html
+++ b/covers/index.html
@@ -102,6 +102,13 @@ gap: 5px;
 
 <div class="parent">
 <div>
+    <img src="/img/20231110%20-%20LUN.png">
+</div>
+</div>
+
+
+<div class="parent">
+<div>
     <img src="/img/20211212%20-%20AustralValdivia.png"> 
   </div>
   <div>
