--- a/covers/index.html
+++ b/covers/index.html
@@ -75,6 +75,7 @@ gap: 5px;
 <p><em>For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>.</em></p>
 <hr>
 
+<h3 id="on-the-front-page">Las últimas Noticias</h3>
 
 <div class="parent">
 <div>
