--- a/covers/index.html
+++ b/covers/index.html
@@ -75,7 +75,7 @@ gap: 5px;
 <p><em>For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>.</em></p>
 <hr>
 
-<h3 id="on-the-front-page">Las últimas Noticias</h3>
+<h3 id="on-the-front-page">Las Últimas Noticias</h3>
 
 <div class="parent">
 <div>
@@ -106,6 +106,8 @@ gap: 5px;
     <img src="/img/20231110%20-%20LUN.png">
 </div>
 </div>
+
+<h3 id="on-the-front-page">Regional</h3>
 
 
 <div class="parent">
@@ -144,6 +146,8 @@ gap: 5px;
 </div>
 </div>
 
+
+<h3 id="on-the-front-page">La Segunda</h3>
 
 
 <div class="parent">
@@ -334,6 +338,9 @@ gap: 5px;
 </div>
 </div>
 
+
+<h3 id="on-the-front-page">El Mercurio</h3>
+
 <div class="parent">
 <div>
     <img src="/img/20230208%20-%20El%20Mercurio.png"> 
@@ -346,6 +353,7 @@ gap: 5px;
 </div>
 </div>
 
+<h3 id="on-the-front-page">Regional</h3>
 
 <div class="parent">
 <div>
@@ -373,8 +381,7 @@ gap: 5px;
 
 <hr>
 <h2 id="links">Links</h2>
-<p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">Twitter</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">On the Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://www.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía y Gobierno</a></p> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker
-">Democracy and Government Lab</a></p>
+<p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">Twitter</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">On the Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://www.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía y Gobierno</a></p> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">Democracy and Government Lab</a></p>
 
 <hr>
 
