--- a/columns/index.html
+++ b/columns/index.html
@@ -74,6 +74,7 @@
 <h2 id="las-ultimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20231110 - La prueba del pato</li>
 <li>20231103 - La guinda de la torta</li>
 <li>20231103 - Los gestos cuestan caro</li>
 <li>20231030 - ¿La segunda es la vencida?</li>
