--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, a consultant and a columnist. I am an AP at the Economics Department of San Sebastian University, and director of the Democracy and Government Laboratory. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide, and regularly comment on current affairs.</p>
+<p>I am an academic, a consultant and a columnist. I work at the Economics Department of San Sebastian University. I am director of the Democracy and Government Laboratory. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide, and I regularly comment on current affairs.</p>
 
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
