--- a/covers/index.html
+++ b/covers/index.html
@@ -33,7 +33,8 @@ gap: 5px;
 .column {
   float: left;
   width: 33.33%;
-  padding: 5px;
+  width: 200px;
+  height: 200px;
 }
 
 /* Clear floats after image containers */
