--- a/covers/index.html
+++ b/covers/index.html
@@ -29,6 +29,16 @@ display:flex;
 gap: 5px;
 }       
 
+.container > img {
+  height: 100%;
+  width: auto;
+}
+.container {
+  height: 160px;
+  display: flex;
+  justify-content: center;
+}
+
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
   float: left;
@@ -172,13 +182,13 @@ gap: 5px;
 
 
 <div class="row">
-    <div class="column">
+    <div class="container">
         <img src="/img/20231017%20-%20La%20Segunda.png" style="width:100%"> 
     </div>
-    <div>
+    <div class="container">
         <img src="/img/20230504%20-%20La%20Segunda.png" style="width:100%"> 
     </div>
-    <div>
+    <div class="container">
         <img src="/img/20231013%20-%20La%20Segunda.jpg" style="width:100%">
     </div>
 </div>
