--- a/covers/index.html
+++ b/covers/index.html
@@ -29,11 +29,11 @@ display:flex;
 gap: 5px;
 }       
 
-.container > img {
+.containerkb > img {
   height: 100%;
   width: auto;
 }
-.container {
+.containerkb {
   height: 160px;
   display: flex;
   justify-content: center;
@@ -182,13 +182,13 @@ gap: 5px;
 
 
 <div class="row">
-    <div class="container">
+    <div class="containerkb">
         <img src="/img/20231017%20-%20La%20Segunda.png" style="width:100%"> 
     </div>
-    <div class="container">
+    <div class="containerkb">
         <img src="/img/20230504%20-%20La%20Segunda.png" style="width:100%"> 
     </div>
-    <div class="container">
+    <div class="containerkb">
         <img src="/img/20231013%20-%20La%20Segunda.jpg" style="width:100%">
     </div>
 </div>
