--- a/covers/index.html
+++ b/covers/index.html
@@ -180,6 +180,8 @@ gap: 5px;
 
 <h3 id="on-the-front-page">La Segunda</h3>
 
+
+<div class="row">
     <div class="containerkb">
         <img src="/img/20231017%20-%20La%20Segunda.png" style="width:100%"> 
     </div>
@@ -189,7 +191,7 @@ gap: 5px;
     <div class="containerkb">
         <img src="/img/20231013%20-%20La%20Segunda.jpg" style="width:100%">
     </div>
-
+</div>
 
 <div class="parent">
     <div>
