--- a/covers/index.html
+++ b/covers/index.html
@@ -45,6 +45,24 @@ gap: 5px;
   clear: both;
   display: table;
 }
+
+.flex-container {
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: flex-start; /* should align items to the top of your flex row if they don't reach 100px in height */
+}
+.inner-image {
+    max-height: 100px;
+}
+.inner-image.portrait {
+    height: 200px;
+    width: 100px;
+}
+.inner-image.landscape {
+    height: 100px;
+    width: 200px;
+}
+
 </style>  
 
 </head>
@@ -171,6 +189,12 @@ gap: 5px;
 
 
 <h3 id="on-the-front-page">La Segunda</h3>
+
+<div class="flex-container">
+        <img src="/img/20231017%20-%20La%20Segunda.png" style="width:100%"> 
+        <img src="/img/20230504%20-%20La%20Segunda.png" style="width:100%"> 
+        <img src="/img/20231013%20-%20La%20Segunda.jpg" style="width:100%">
+</div>
 
 
 <div class="row">
