--- a/covers/index.html
+++ b/covers/index.html
@@ -191,9 +191,9 @@ gap: 5px;
 <h3 id="on-the-front-page">La Segunda</h3>
 
 <div class="flex-container">
-        <img src="/img/20231017%20-%20La%20Segunda.png" class="inner-image landscape"> 
-        <img src="/img/20230504%20-%20La%20Segunda.png" class="inner-image landscape"> 
-        <img src="/img/20231013%20-%20La%20Segunda.jpg" class="inner-image landscape">
+        <img src="/img/20231017%20-%20La%20Segunda.png" class="inner-image portrait"> 
+        <img src="/img/20230504%20-%20La%20Segunda.png" class="inner-image portrait"> 
+        <img src="/img/20231013%20-%20La%20Segunda.jpg" class="inner-image portrait">
 </div>
 
 
