--- a/covers/index.html
+++ b/covers/index.html
@@ -56,7 +56,7 @@ gap: 5px;
 }
 .inner-image.portrait {
     height: 200px;
-    width: 100px;
+    width: 33%;
 }
 .inner-image.landscape {
     height: 100px;
