--- a/covers/index.html
+++ b/covers/index.html
@@ -52,7 +52,7 @@ gap: 5px;
     align-items: flex-start; /* should align items to the top of your flex row if they don't reach 100px in height */
 }
 .inner-image {
-    max-height: 100px;
+    max-width: 100px;
 }
 .inner-image.portrait {
     height: 200px;
