--- a/columns/index.html
+++ b/columns/index.html
@@ -362,6 +362,7 @@
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
+<li>20231112 - La casta pura</li>
 <li>20231105 - Una Constitución de consensos y no de extremos</li>
 <li>20231027 - El crépusculo de la generación dorada</li>
 <li>20231020 - Boric, Xi, Putin y Hamas</li>
