--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     width: 100%;
   }
 }
+mark {
+  background-color: yellow;
+  color: black;
+}
 </style>  
 
 <meta property="og:title" content="Kenneth Bunker" />
