--- a/columns/index.html
+++ b/columns/index.html
@@ -405,6 +405,7 @@ mark {
 <hr>
 </div>
 </div>
+</div>
 
 
 
@@ -568,7 +569,24 @@ mark {
 <hr>
 </div>
 </div>
+</div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <div class="column">
     <div id="content">
     <div class="container">
 
