--- a/columns/index.html
+++ b/columns/index.html
@@ -754,14 +754,13 @@ mark {
 ">Democracy and Government Lab</a></p>
 
 <hr>
-
 </div>
-
-       </div><div id="footer" class="mb-5">
+</div>
     
         <hr>
         <div class="container text-center">
-            <a href="https://github.com/"><small>2023</small></a>
+                    </div><div id="footer" class="mb-5">
+            <a href="https://twitter.com/kennethbunker"><small>2023</small></a>
         </div>
     
 </div>
