--- a/index.html
+++ b/index.html
@@ -2275,8 +2275,11 @@ mark {
 </div>
 </body>
 
-        <hr>
-        <div class="container text-center">
-                    </div><div id="footer" class="mb-5">
-            <a href="https://twitter.com/kennethbunker"><small>2023</small></a>
+<hr>
+<div class="container text-center">
+    <div id="footer" class="mb-5">
+        <a href="https://twitter.com/kennethbunker"><small>2023</small></a>
+    </div>
+</div>
+
 </html>
