--- a/columns/index.html
+++ b/columns/index.html
@@ -754,13 +754,16 @@ mark {
 <hr>
 </div>
 </div>
-    
-        <hr>
-        <div class="container text-center">
-                    </div><div id="footer" class="mb-5">
-            <a href="https://twitter.com/kennethbunker"><small>2023</small></a>
-        </div>
+</div>
     
 </div>
 </body>
+
+<hr>
+<div class="container text-center">
+    <div id="footer" class="mb-5">
+        <a href="https://twitter.com/kennethbunker"><small>2023</small></a>
+    </div>
+</div>
+
 </html>
