--- a/columns/index.html
+++ b/columns/index.html
@@ -642,7 +642,7 @@ mark {
 <li>20170615 - Conflictos reales y artificiales</li>
 <li>20170601 - Si no les puedes ganar</li>
 <li>20170426 - Un triste espectáculo</li>
-<li>20170407 - El Partido Socialista tiene en sus manos ...</li>
+<li>20170407 - El Partido Socialista tiene en sus manos [...]</li>
 <li>20170310 - Un balance negativo</li>
 <li>20170105 - Una carrera de dos caballos</li>
 <li>20161207 - El estado de la carrera presidencial</li>
@@ -743,7 +743,7 @@ mark {
 
 <hr>
 
-<h2 id="others-la-naci-n-la-segunda-el-mostrador-">Others (La Nación, La Segunda, El Mostrador)</h2>
+<h2 id="others">Others</h2>
 <p><a href="https://www.lanacion.cl"><em>La Nación</em></a>; <a href="https://www.lasegunda.com"><em>La Segunda</em></a>; <a href="https://www.elmostrador.cl"><em>El Mostrador</em></a></p>
 <ul>
 <li>20080913 - La política chilena tiene una lección que aprender</li>
@@ -757,7 +757,7 @@ mark {
 </ul>
 
 
-<h2 id="others-selected-english-">Others (selected, english)</h2>
+<h2 id="english">English</h2>
 <ul>
 
 <li>20160520 - HuffPost. <a href="https://www.huffingtonpost.co.uk/kenneth-bunker/how-the-major-parties-wil_b_10044036.html">How the Major Parties Will Face the EU</a>
