--- a/columns/index.html
+++ b/columns/index.html
@@ -752,7 +752,7 @@ mark {
 
 
 <h2 id="others">Others</h2>
-<p><a href="https://www.lanacion.cl"><em>La Nación</em></a>; <a href="https://www.lasegunda.com"><em>La Segunda</em></a>; <a href="https://www.elmostrador.cl"><em>El Mostrador</em></a></p>
+<p><a href="https://www.lanacion.cl"><em>La Nación</em></a>; <a href="https://www.lasegunda.com"><em>La Segunda</em></a></p>
 <ul>
 <li>20080913 - La política chilena tiene una lección que aprender</li>
 <li>20080219 - Segunda etapa: Bachelet y los partidos</li>
